deploy/test-service-gpg.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-service
  annotations:
    verify-manifest.kyverno.io/message: H4sIAJO0MmIAAy2KywrCQAxF9/MV+YGCImjNTlwLhUr3YRpksDMJmVDo32sfu3vOuaRpYKtJCsJ8Dt9URoSebU6RQ2ankZwwABTKjJCXph6xKsc1VJ44uti6AUgV4bU8VP+oYl5334CauESZEN7PbnP7AaE9HehkH/Zuk/fL7Rp+YSHiXp4AAAA=
    verify-manifest.kyverno.io/signature: LS0tLS1CRUdJTiBQR1AgU0lHTkFUVVJFLS0tLS0KCmlRRktCQUFCQ0FBMEZpRUVRRmVCc3JTbUw2Ukh4YVJJK2s3U1hTeUFnTDhGQW1JeXRKTVdISE5wWjI1bGNrQmwKYm5SbGNuQnlhWE5sTG1OdmJRQUtDUkQ2VHRKZExJQ0F2NElzQi9vQ2xua2U3SUVRVWhBR21WZm1iV0Q5Wk9VcwpjTk5odXlDMTZJUFBGQWx3K0RlNFFsZDY2ZzJ3RnJLQmdpMGhwSFhKeVUzRGFXQXpqdklpQzNlTDBPYU1wNHdrCmRTdkR4M3BTZ3NjRjIvN0ppTCtwdUNHTERtQTNnbFJHSU8yUi9MczJyNU13Uzg2NFYrMW5aUXM5L21BaWR2c2kKVUlwMnAweEt3N1ZoeG95cEhZcU94Tm4wN2k2RWVHblh2eTB3QkphamhuOGxpZDhxblpPak [...]
spec:
  selector:
    app: MyApp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9376
