deploy/kyverno-policy-mutate-rule.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: mutate-verified-resources
spec:
  background: false
  failurePolicy: Fail  
  rules:
    - name: mutate-verified-resources
      match:
        resources:
          kinds:
            - ClusterRole
            - ClusterRoleBinding
            - ConfigMap
            - Deployment
            - Pod
            - Role
            - RoleBinding
            - Secret
            - Service
            - ServiceAccount
            - ClusterPolicy
            - Policy
          name: test*
      mutate:
        patchStrategicMerge:
          metadata:
            annotations:
              +(manifest-verify.kyverno.io/result): "true"     
        key: |-
          -----BEGIN PUBLIC KEY-----
          MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEyQfmL5YwHbn9xrrgG3vgbU0KJxMY
[...]
          -----END PUBLIC KEY-----
        ignoreFields:
        - fields:
          - metadata.annotations.manifest-verify.kyverno.io/result
          - metadata.annotations.policies.kyverno.io/last-applied-patches
          objects:
          - name: '*'
