deploy/kyverno-policy-validate-rule-all-policies.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-resources
spec:
  validationFailureAction: enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail  
  rules:
    - name: validate-resources
      match:
        any:
        - resources:
            kinds:
              - ClusterPolicy
              - Policy
      validate:
        manifests:
          attestors:
          - entries:
            - keys: 
                publicKeys:  |-
                  -----BEGIN PUBLIC KEY-----
                  MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEyQfmL5YwHbn9xrrgG3vgbU0KJxMY
[...]
                  -----END PUBLIC KEY-----
          ignoreFields:
          - objects:
            - kind: ClusterPolicy
            - kind: Policy
            fields:
            - spec.rules.1.*
            - spec.rules.2.*
          # dryRun:
          #   enable: true
          #   namespace: dryrun-ns
