deploy/kyverno-policy-validate-rule-imageRef.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-resources
spec:
  validationFailureAction: enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail  
  rules:
    - name: validate-resources
      match:
        resources:
          kinds:
            - Service
          name: test-*
      validate:
        manifests:
          attestors:
          - entries:
            - keys:
                # pub
                publicKeys: |-
                    -----BEGIN PUBLIC KEY-----
                    MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEyQfmL5YwHbn9xrrgG3vgbU0KJxMY
[...]
                    -----END PUBLIC KEY-----
              repository: ghcr.io/rurikudo/test-service-sig:latest
          skipUsers:
          - objects: 
            - kind: ReplicaSet
            users: 
            - system:serviceaccount:kube-system:deployment-controller
          - objects: 
            - kind: Pod
            users:  
            - system:serviceaccount:kube-system:replicaset-controller
          - objects: 
            - kind: Secret
            users: 
            - system:kube-controller-manager
