deploy/kyverno-policy-validate-rule-keyless.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-resources
spec:
  validationFailureAction: enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail  
  rules:
    - name: validate-resources
      match:
        resources:
          kinds:
            - Service
            - Deployment
            - Pod
          name: test*
      validate:
        subject: rkudo@redhat.com
        skipUsers:
        - objects: 
          - kind: ReplicaSet
          users: 
          - system:serviceaccount:kube-system:deployment-controller
        - objects: 
          - kind: Pod
          users:  
          - system:serviceaccount:kube-system:replicaset-controller
        # verifyConfig:
        #   disableDryRun: true
        # ignoreFields:
        # - objects:
        #   - kind: Service
        #   fields:
        #   - spec.sessionAffinity
        #   - spec.type
        #   - spec.ipFamilies.*
        #   - spec.ipFamilyPolicy
