deploy/kyverno-policy-validate-rule-no-dryrun-cert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-resources
spec:
  validationFailureAction: enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail  
  rules:
    - name: validate-resources
      match:
        resources:
          kinds:
            - ClusterRole
            - ClusterRoleBinding
            - ConfigMap
            - Deployment
            - Pod
            - Role
            - RoleBinding
            - Secret
            - Service
            - ServiceAccount
            - ClusterPolicy
            - Policy
          name: test*
      validate:
        manifests:
          attestors:
          - count: 1
            entries:
            - certificates:
                cert: |-
                    -----BEGIN CERTIFICATE-----
                    MIICoTCCAYkCCQCpfNIImSC5fjANBgkqhkiG9w0BAQsFADASMRAwDgYDVQQDDAd0
[...]
                    X2+ldR8=
                    -----END CERTIFICATE-----
                certChain: |-
                    -----BEGIN CERTIFICATE-----
                    MIICoDCCAYgCCQCBo8AUUzSlhzANBgkqhkiG9w0BAQsFADASMRAwDgYDVQQDDAd0
[...]
                    wTm4xw==
                    -----END CERTIFICATE-----
          # annotationDomain: "kyverno.cosign.sigstore.dev"
          skipUsers:
          - objects: 
            - kind: ReplicaSet
            users: 
            - system:serviceaccount:kube-system:deployment-controller
          - objects: 
            - kind: Pod
            users:  
            - system:serviceaccount:kube-system:replicaset-controller
          - objects: 
            - kind: Secret
            users: 
            - system:kube-controller-manager
