deploy/kyverno-policy-validate-rule-no-dryrun-gpg.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-resources
spec:
  validationFailureAction: enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail  
  rules:
    - name: validate-resources
      match:
        resources:
          kinds:
            - Service
          name: my-service
      validate:
        manifests:
          attestors:
          - entries:
            - keys:
                # pub
                publicKeys: |-
                  -----BEGIN PGP PUBLIC KEY BLOCK-----

                  mQENBF+0ogoBCADiOMDUUXI/dnPjSj1GTJ5pNv6GTzxEEkFNSjzskTyGPwE+D14y
[...]
                  f+sWpdOji/jIAfAm+nkQ2oxzup1oUAqCqM5HoTpSt//7By+gJXZofa+8
                  =MZiY
                  -----END PGP PUBLIC KEY BLOCK-----
          annotationDomain: "verify-manifest.kyverno.io"
          skipUsers:
          - objects: 
            - kind: ReplicaSet
            users: 
            - system:serviceaccount:kube-system:deployment-controller
          - objects: 
            - kind: Pod
            users:  
            - system:serviceaccount:kube-system:replicaset-controller
          - objects: 
            - kind: Secret
            users: 
            - system:kube-controller-manager
