deploy/kyverno-policy-validate-rule-no-dryrun-multi-sig.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-resources
spec:
  validationFailureAction: enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail  
  rules:
    - name: validate-resources
      match:
        resources:
          kinds:
            - ClusterRole
            - ClusterRoleBinding
            - ConfigMap
            - Deployment
            - Pod
            - Role
            - RoleBinding
            - Secret
            - Service
            - ServiceAccount
            - ClusterPolicy
            - Policy
          name: test*
      validate:
        manifest:
          keys:
          - |-
              -----BEGIN PUBLIC KEY-----
              MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEyQfmL5YwHbn9xrrgG3vgbU0KJxMY
[...]
              -----END PUBLIC KEY-----
          - |-
              -----BEGIN PUBLIC KEY-----
              MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEE8uGVnyDWPPlB7M5KOHRzxzPHtAy
[...]
              -----END PUBLIC KEY-----
          verifyConfig:
            validateLogic:  mustAll # mustAll or atLeastOne
            messageAnnotation: cosign.sigstore.dev/message
            signatureAnnotations: 
            - kyverno.cosign.sigstore.dev/signature
            - cosign.sigstore.dev/signature
          skipUsers:
          - objects: 
            - kind: ReplicaSet
            users: 
            - system:serviceaccount:kube-system:deployment-controller
          - objects: 
            - kind: Pod
            users:  
            - system:serviceaccount:kube-system:replicaset-controller
          - objects: 
            - kind: Secret
            users: 
            - system:kube-controller-manager
          ignoreFields:
          - objects:
            - kind: Service
            fields:
            - spec.sessionAffinity
            - spec.type
            - spec.ipFamilies.*
            - spec.ipFamilyPolicy
            - spec.internalTrafficPolicy
          - objects:
            - kind: ClusterPolicy
            - kind: Policy
            fields:
            - metadata.annotations.pod-policies.kyverno.io/autogen-controllers
            - spec.failurePolicy
            - spec.rules.*.match.any.0.resources.kinds.*
            - spec.rules.*.name
            - spec.rules.*.validate.message
            - spec.rules.*.validate.deny.conditions.all.*
            - spec.background
