deploy/kyverno-policy-validate-rule-no-dryrun-multi-signer.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-resources
spec:
  validationFailureAction: enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail  
  rules:
    - name: validate-resources
      match:
        resources:
          kinds:
            - ClusterRole
            - ClusterRoleBinding
            - ConfigMap
            - Deployment
            - Pod
            - Role
            - RoleBinding
            - Secret
            - Service
            - ServiceAccount
            - ClusterPolicy
            - Policy
          name: test*
      validate:
        manifests:
          keys:
          - subject: rkudo@redhat.com
          - subject: rurikudo@ibm.com
          keyOperation:  mustAll # mustAll or atLeastOne
          # annotationDomain: "kyverno.cosign.sigstore.dev"
          skipUsers:
          - objects: 
            - kind: ReplicaSet
            users: 
            - system:serviceaccount:kube-system:deployment-controller
          - objects: 
            - kind: Pod
            users:  
            - system:serviceaccount:kube-system:replicaset-controller
          - objects: 
            - kind: Secret
            users: 
            - system:kube-controller-manager
