deploy/kyverno-policy-validate-rule-no-dryrun-secret.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-resources
spec:
  validationFailureAction: enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail  
  rules:
    - name: validate-resources
      match:
        any:
        - resources:
            kinds:
              - ClusterRole
              - ClusterRoleBinding
              - ConfigMap
              - Deployment
              - Pod
              - Role
              - RoleBinding
              - Secret
              - Service
              - ServiceAccount
              - ClusterPolicy
              - Policy
            name: test*
      exclude:
        any:
        - resources:
            kinds:
              - Pod
          subjects:
          - kind: ServiceAccount
            namespace: kube-system
            name: replicaset-controller
        - resources:
            kinds:
              - ReplicaSet
          subjects:
          - kind: ServiceAccount
            namespace: kube-system
            name: deployment-controller
        - resources:
            kinds:
              - Secret
          subjects:
          - kind: User
            name: system:kube-controller-manager
      validate:
        manifests:
          attestors:
          - entries:
            - keys: 
                publicKeys: k8s://default/my-pubkey
