deploy/kyverno-policy-validate-rule.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: validate-resources
spec:
  validationFailureAction: enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail  
  rules:
    - name: validate-resources
      match:
        any:
        - resources:
            kinds:
              - ClusterRole
              - ClusterRoleBinding
              - ConfigMap
              - Deployment
              - Pod
              - Role
              - RoleBinding
              - Secret
              - Service
              - ServiceAccount
              - ClusterPolicy
              - Policy
            name: test*
      # ExcludeResources defines when this policy rule should not be applied.
      exclude:
        any:
        - resources:
            kinds:
              - Pod
          subjects:
          - kind: ServiceAccount
            namespace: kube-system
            name: replicaset-controller
        - resources:
            kinds:
              - ReplicaSet
          subjects:
          - kind: ServiceAccount
            namespace: kube-system
            name: deployment-controller
        - resources:
            kinds:
              - Secret
          subjects:
          - kind: User
      validate:
        manifests:
          attestors:
          - entries:
            - keys: 
                publicKeys: |-
                  -----BEGIN PUBLIC KEY-----
                  MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEyQfmL5YwHbn9xrrgG3vgbU0KJxMY
[...]
                  -----END PUBLIC KEY-----
          dryRun:
            enable: true
