deploy/kyverno-verify-resource.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: verify-resources
spec:
  validationFailureAction: enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail  
  rules:
    - name: verify-sample-resources
      match:
        resources:
          kinds:
            - ClusterRole
            - ClusterRoleBinding
            - ConfigMap
            - Deployment
            - Pod
            - Role
            - RoleBinding
            - Secret
            - Service
            - ServiceAccount
          name: test*
      validate:
        key: |-
          -----BEGIN PUBLIC KEY-----
          MFkwEwYHKoZIzj0CAQYIKoZIzj0DAQcDQgAEyQfmL5YwHbn9xrrgG3vgbU0KJxMY
[...]
          -----END PUBLIC KEY-----
