deploy/test-kyverno-cpol-auto-gen.yaml
apiVersion : kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: test-restrict-image-registries
spec:
  validationFailureAction: enforce
  rules:
  - name: validate-registries
    match:
      any:
      - resources:
          kinds:
          - Pod
    validate:
      message: "Images may only come from our internal enterprise registry."
      pattern:
        spec:
          containers:
          - image: "registry.domain.com/*"
